--- a/FacadeForge/FacadeForgeUI/Views/Categories/Create.cshtml
+++ b/FacadeForge/FacadeForgeUI/Views/Categories/Create.cshtml
@@ -1,25 +1,25 @@
 ﻿@model FacadeForgeUI.Data.Category
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>Create</h1>
 
 <h4>Category</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="CategoryID" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -29,3 +29,13 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+@{
+    // Добавляем отладочный вывод значений свойств модели
+    if (Model != null)
+    {
+        <div>
+            <h4>Debug Information</h4>
+            <p>Name: @Model.Name</p>
+        </div>
+    }
+}
