--- a/FacadeForge/FacadeForgeUI/Views/Categories/Details.cshtml
+++ b/FacadeForge/FacadeForgeUI/Views/Categories/Details.cshtml
@@ -1,12 +1,12 @@
 ﻿@model FacadeForgeUI.Data.Category
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>Details</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Category</h4>
     <hr />
@@ -18,10 +18,8 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="CategoryID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model?.CategoryID">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
