--- a/FacadeForge/FacadeForgeUI/Views/Shared/_Layout.cshtml
+++ b/FacadeForge/FacadeForgeUI/Views/Shared/_Layout.cshtml
@@ -26,10 +26,9 @@
                                 <span class="visually-hidden">(current)</span>
                             </a>
                         </li>
-                        @if (User.IsInRole("Admin"))
-                        {
+                        
                             <li class="nav-item">
-                                <a class="nav-link" href="/Categorie/Index">Категории</a>
+                                <a class="nav-link" href="/Categories/Index">Категории</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/Tool/Index">Инструменты</a>
@@ -37,8 +36,6 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="/Material/Index">Материалы</a>
                             </li>
-                            
-                        }
                         @* <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                     <div class="dropdown-menu">
