--- a/FacadeForge/FacadeForgeUI/Views/Categories/Edit.cshtml
+++ b/FacadeForge/FacadeForgeUI/Views/Categories/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model FacadeForgeUI.Data.Category
+﻿﻿@model FacadeForgeUI.Data.Category
 
 @{
     ViewData["Title"] = "Edit";
@@ -29,4 +29,3 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
