--- a/FacadeForge/FacadeForgeUI/Views/Categories/Index.cshtml
+++ b/FacadeForge/FacadeForgeUI/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<FacadeForgeUI.Data.Category>
+﻿﻿@model IEnumerable<FacadeForgeUI.Data.Category>
 
 @{
     ViewData["Title"] = "Index";
