--- a/FacadeForge/FacadeForgeUI/Views/Material/Index.cshtml
+++ b/FacadeForge/FacadeForgeUI/Views/Material/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<FacadeForgeUI.Data.Material>
+﻿﻿@model IEnumerable<FacadeForgeUI.Data.Material>
 
 @{
     ViewData["Title"] = "Index";
