--- a/FacadeForge/FacadeForgeUI/Views/Tool/Create.cshtml
+++ b/FacadeForge/FacadeForgeUI/Views/Tool/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model FacadeForgeUI.Data.Tool
+﻿﻿@model FacadeForgeUI.Data.Tool
 
 @{
     ViewData["Title"] = "Create";
@@ -61,4 +61,3 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
