--- a/FacadeForge/FacadeForgeUI/Views/Material/Create.cshtml
+++ b/FacadeForge/FacadeForgeUI/Views/Material/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model FacadeForgeUI.Data.Material
+﻿﻿@model FacadeForgeUI.Data.Material
 
 @{
     ViewData["Title"] = "Create";
@@ -51,4 +51,3 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
