--- a/FacadeForge/FacadeForgeUI/Views/Shared/_Layout.cshtml
+++ b/FacadeForge/FacadeForgeUI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -26,16 +27,16 @@
                                 <span class="visually-hidden">(current)</span>
                             </a>
                         </li>
-                        
-                            <li class="nav-item">
-                                <a class="nav-link" href="/Categories/Index">Категории</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/Tool/Index">Инструменты</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/Material/Index">Материалы</a>
-                            </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Categories/Index">Категории</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Tool/Index">Инструменты</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Material/Index">Материалы</a>
+                        </li>
                         @* <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                     <div class="dropdown-menu">
