Revert "хрень какая-то"
This reverts commit 95610d7aeb18a885f94ee817586199e30242eb71.

--- a/FacadeForge/FacadeForgeUI/Views/Material/Create.cshtml
+++ b/FacadeForge/FacadeForgeUI/Views/Material/Create.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@model FacadeForgeUI.Data.Material
+﻿@model FacadeForgeUI.Data.Material
 
 @{
     ViewData["Title"] = "Create";
@@ -51,3 +51,4 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
