--- a/FacadeForge/FacadeForgeUI/Views/Material/Edit.cshtml
+++ b/FacadeForge/FacadeForgeUI/Views/Material/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@model FacadeForgeUI.Data.Material
+﻿@model FacadeForgeUI.Data.Material
 
 @{
     ViewData["Title"] = "Edit";
@@ -53,3 +53,4 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
