--- a/FacadeForge/FacadeForgeUI/Views/Tool/Edit.cshtml
+++ b/FacadeForge/FacadeForgeUI/Views/Tool/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@model FacadeForgeUI.Data.Tool
+﻿@model FacadeForgeUI.Data.Tool
 
 @{
     ViewData["Title"] = "Edit";
@@ -63,3 +63,4 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
